--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,25 @@
 <body id="corpo" data-usr="{{ usr }}">
     <h1>Home</h1>
     <p>Ver <a href="{{ url_for('usuario') }}">usuário</a></p>
+
+    <form method="post">
+        <table>
+            <tr>
+                <td>e-mail</td>
+                <td><input type="email" name="email" id="email"></td>
+            </tr>
+
+            <tr>
+                <td>senha</td>
+                <td><input type="password" name="senha" id="senha"></td>
+            </tr>
+
+            <tr>
+                <td><input type="submit" id="btn_entrar" value="Entrar"></td>
+            </tr>
+        </table>
+    </form>
+
     <input type="button" onclick="alertar()" value="alerta">
     <input type="button" onclick="enviar_ajax()" value="enviar">
 
