--- a/templates/usuario.html
+++ b/templates/usuario.html
@@ -11,6 +11,7 @@
     <p>Ver <a href="{{ url_for('index') }}">home</a></p>
     <p id="usr_id">{{ usr.id }}</p>
     <p id="usr_nome">{{ usr.nome }}</p>
+    <p id="usr_senha">{{ usr.senha }}</p>
 
     <script src="{{ url_for('static', filename='jquery-3.4.1.min.js') }}"></script>
     <script src="{{ url_for('static', filename='main.js') }}"></script>
