--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <h1>Home</h1>
     <p>Ver <a href="{{ url_for('usuario') }}">usuário</a></p>
 
-    <form method="post">
+    <form id="form_login" method="post" action="/usuario">
         <table>
             <tr>
                 <td>e-mail</td>
