--- a/templates/index.html
+++ b/templates/index.html
@@ -10,11 +10,13 @@
     <h1>Home</h1>
     <p>Ver <a href="{{ url_for('usuario') }}">usuário</a></p>
 
+    <span id="s_nome"></span>
+    
     <form id="form_login" method="post" action="/usuario">
         <table>
             <tr>
                 <td>e-mail</td>
-                <td><input type="email" name="email" id="email"></td>
+                <td><input id="email" type="email" name="email" id="email"></td>
             </tr>
 
             <tr>
@@ -29,7 +31,7 @@
     </form>
 
     <input type="button" onclick="alertar()" value="alerta">
-    <input type="button" onclick="enviar_ajax()" value="enviar">
+    <input type="button" onclick="enviar_ajax()" value="enviar ajax">
 
     <script src="{{ url_for('static', filename='jquery-3.4.1.min.js') }}"></script>
     <script src="{{ url_for('static', filename='main.js') }}"></script>
